--- a/main.html
+++ b/main.html
@@ -1,248 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>Material Design for Bootstrap</title>
-  <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
-  <!-- Google Fonts Roboto -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
-  <!-- MDB -->
-  <link rel="stylesheet" href="css/bootstrap-shopping-carts.min.css" />
-</head>
-
-<body>
-  <!-- Start your project here-->
-  <style>
-    @media (min-width: 1025px) {
-      .h-custom {
-        height: 100vh !important;
-      }
-    }
-  </style>
-  <section class="h-100 h-custom">
-    <div class="container h-100 py-5">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col">
-
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col" class="h5">Shopping Bag</th>
-                  <th scope="col">Format</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">
-                    <div class="d-flex align-items-center">
-                      <img src="https://i.imgur.com/2DsA49b.webp" class="img-fluid rounded-3" style="width: 120px;" alt="Book">
-                      <div class="flex-column ms-4">
-                        <p class="mb-2">Thinking, Fast and Slow</p>
-                        <p class="mb-0">Daniel Kahneman</p>
-                      </div>
-                    </div>
-                  </th>
-                  <td class="align-middle">
-                    <p class="mb-0" style="font-weight: 500;">Digital</p>
-                  </td>
-                  <td class="align-middle">
-                    <div class="d-flex flex-row">
-                      <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
-
-                      <input id="form1" min="0" name="quantity" value="2" type="number"
-                        class="form-control form-control-sm" style="width: 50px;" />
-
-                      <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                  </td>
-                  <td class="align-middle">
-                    <p class="mb-0" style="font-weight: 500;">$9.99</p>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row" class="border-bottom-0">
-                    <div class="d-flex align-items-center">
-                      <img src="https://i.imgur.com/Oj1iQUX.webp" class="img-fluid rounded-3" style="width: 120px;" alt="Book">
-                      <div class="flex-column ms-4">
-                        <p class="mb-2">Homo Deus: A Brief History of Tomorrow</p>
-                        <p class="mb-0">Yuval Noah Harari</p>
-                      </div>
-                    </div>
-                  </th>
-                  <td class="align-middle border-bottom-0">
-                    <p class="mb-0" style="font-weight: 500;">Paperback</p>
-                  </td>
-                  <td class="align-middle border-bottom-0">
-                    <div class="d-flex flex-row">
-                      <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
-
-                      <input id="form1" min="0" name="quantity" value="1" type="number"
-                        class="form-control form-control-sm" style="width: 50px;" />
-
-                      <button class="btn btn-link px-2"
-                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                  </td>
-                  <td class="align-middle border-bottom-0">
-                    <p class="mb-0" style="font-weight: 500;">$13.50</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div class="card shadow-2-strong mb-5 mb-lg-0" style="border-radius: 16px;">
-            <div class="card-body p-4">
-
-              <div class="row">
-                <div class="col-md-6 col-lg-4 col-xl-3 mb-4 mb-md-0">
-                  <form>
-                    <div class="d-flex flex-row pb-3">
-                      <div class="d-flex align-items-center pe-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="radioNoLabel"
-                          id="radioNoLabel1v"
-                          value=""
-                          aria-label="..."
-                          checked
-                        />
-                      </div>
-                      <div class="rounded border w-100 p-3">
-                        <p class="d-flex align-items-center mb-0">
-                          <i class="fab fa-cc-mastercard fa-2x text-dark pe-2"></i>Credit
-                          Card
-                        </p>
-                      </div>
-                    </div>
-                    <div class="d-flex flex-row pb-3">
-                      <div class="d-flex align-items-center pe-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="radioNoLabel"
-                          id="radioNoLabel2v"
-                          value=""
-                          aria-label="..."
-                        />
-                      </div>
-                      <div class="rounded border w-100 p-3">
-                        <p class="d-flex align-items-center mb-0">
-                          <i class="fab fa-cc-visa fa-2x fa-lg text-dark pe-2"></i>Debit Card
-                        </p>
-                      </div>
-                    </div>
-                    <div class="d-flex flex-row">
-                      <div class="d-flex align-items-center pe-2">
-                        <input
-                          class="form-check-input"
-                          type="radio"
-                          name="radioNoLabel"
-                          id="radioNoLabel3v"
-                          value=""
-                          aria-label="..."
-                        />
-                      </div>
-                      <div class="rounded border w-100 p-3">
-                        <p class="d-flex align-items-center mb-0">
-                          <i class="fab fa-cc-paypal fa-2x fa-lg text-dark pe-2"></i>PayPal
-                        </p>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-6">
-                  <div class="row">
-                    <div class="col-12 col-xl-6">
-                      <div class="form-outline mb-4 mb-xl-5">
-                        <input type="text" id="typeName" class="form-control form-control-lg" siez="17"
-                          placeholder="John Smith" />
-                        <label class="form-label" for="typeName">Name on card</label>
-                      </div>
-
-                      <div class="form-outline mb-4 mb-xl-5">
-                        <input type="text" id="typeExp" class="form-control form-control-lg" placeholder="MM/YY"
-                          size="7" id="exp" minlength="7" maxlength="7" />
-                        <label class="form-label" for="typeExp">Expiration</label>
-                      </div>
-                    </div>
-                    <div class="col-12 col-xl-6">
-                      <div class="form-outline mb-4 mb-xl-5">
-                        <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
-                          placeholder="1111 2222 3333 4444" minlength="19" maxlength="19" />
-                        <label class="form-label" for="typeText">Card Number</label>
-                      </div>
-
-                      <div class="form-outline mb-4 mb-xl-5">
-                        <input type="password" id="typeText" class="form-control form-control-lg"
-                          placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
-                        <label class="form-label" for="typeText">Cvv</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-xl-3">
-                  <div class="d-flex justify-content-between" style="font-weight: 500;">
-                    <p class="mb-2">Subtotal</p>
-                    <p class="mb-2">$23.49</p>
-                  </div>
-
-                  <div class="d-flex justify-content-between" style="font-weight: 500;">
-                    <p class="mb-0">Shipping</p>
-                    <p class="mb-0">$2.99</p>
-                  </div>
-
-                  <hr class="my-4">
-
-                  <div class="d-flex justify-content-between mb-4" style="font-weight: 500;">
-                    <p class="mb-2">Total (tax included)</p>
-                    <p class="mb-2">$26.48</p>
-                  </div>
-
-                  <button type="button" class="btn btn-primary btn-block btn-lg">
-                    <div class="d-flex justify-content-between">
-                      <span>Checkout</span>
-                      <span>$26.48</span>
-                    </div>
-                  </button>
-
-                </div>
-              </div>
-
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Contemporary shopping cart layout with Bootstrap cards</title>
+  </head>
+  <body>
+    <div class="row px-5 pt-5">
+        <div class="col-md-4 mt-4 mt-sm-0 card-container">
+          <div class="card text-center product p-4 pt-5 border-0 h-100 rounded-0">
+            <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/solodev/bootstrap-cards-shopping-cart/master/images/gear-glasses.jpg" alt="Pilot Aviator Glasses Gear Image">
+            <div class="card-body p-4 py-0 h-xs-440p">
+              <h5 class="card-title font-weight-semi-bold mb-3 w-xl-220p mx-auto">Pilot Aviator Glasses</h5>
+              <p class="price">$45.00</p>
             </div>
+              <p class="btn w-100 px-4 mx-auto">
+                <input type="submit" class="btn btn-dark btn-lg w-100" name="add-button" value="Buy Now">
+              </p>
           </div>
-
         </div>
-      </div>
-    </div>
-  </section>
-  <!-- End your project here-->
+        
+        <div class="col-md-4 mt-4 mt-sm-0 card-container">
+          <div class="card text-center product p-4 pt-5 border-0 h-100 rounded-0">
+            <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/solodev/bootstrap-cards-shopping-cart/master/images/gear-hat.jpg" alt="Command Hats Gear Image">
+            <div class="card-body p-4 py-0 h-xs-440p">
+              <h5 class="card-title font-weight-semi-bold mb-3 w-xl-220p mx-auto">Command Hats</h5>
+              <p class="price">$15.00</p>
+            </div>
+            <p class="btn w-100 px-4 text-center mx-auto">
+              <input type="submit" class="btn btn-dark btn-lg w-100" name="add-button" value="Buy Now"></p>
+          </div>
+        </div>
 
-  <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-  <!-- Custom scripts -->
-  <script type="text/javascript"></script>
-</body>
-
+        <div class="col-md-4 mt-4 mt-sm-0 card-container">
+          <div class="card text-center product p-4 pt-5 border-0 h-100 rounded-0">
+            <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/solodev/bootstrap-cards-shopping-cart/master/images/gear-tshirt.jpg" alt="Mission T-Shirts Gear Image">
+            <div class="card-body p-4 py-0 h-xs-440p">
+              <h5 class="card-title font-weight-semi-bold mb-3 w-xl-220p mx-auto">Mission T-Shirts</h5>
+              <p class="price">$25.00</p>
+            </div>
+            <p class="btn w-100 px-4 mx-auto">
+              <input type="submit" class="btn btn-dark btn-lg w-100" name="add-button" value="Buy Now"></p>
+          </div>
+        </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
